migrate to blocks as hex strings
